--- a/final.html
+++ b/final.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 	<h1>Final Project</h1>
+	<p>This is final Project. It is awesome.</p>
 
 	<ul>
 		<li><a href="index.html">Home</a></li>
